Open page, semi done

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -85,14 +87,10 @@ body {
   overflow-x: hidden;
 }
 
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(28,86,139);
+  background: linear-gradient(90deg, rgba(28,86,139,1) 0%, rgb(26, 98, 175) 55%, rgba(25,84,138,1) 100%);
 }
 
 a {
@@ -105,3 +103,98 @@ a {
     color-scheme: dark;
   }
 }
+
+.header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding-top: 1.6em;
+  font-size: 6em;
+  text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.405);
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  user-select: none;
+
+}
+
+.header2{
+  display: flex;
+  color: rgb(0, 85, 255);
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-size: 6em;
+  text-shadow: 5px 5px 5px rgba(4, 20, 37, 0.526);
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  user-select: none;
+
+}
+
+.clicktomain{
+  animation: text-shadow 1.5s ease-in-out infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding-top: 4.6em;
+    font-size: 2.5em;
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.405);
+    font-family: "Secular One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    user-select: none;
+
+  }
+  
+
+  
+  a:hover {
+    text-decoration: none;
+    cursor:wait;
+  }
+  
+  @keyframes text-shadow {
+    0% {  
+        transform: translateY(0);
+  
+    }
+  
+    20% {  
+        transform: translateX(0.1em);
+  
+    }
+  
+    40% {  
+        transform: translateX(-0.1em);
+  
+    }
+    
+   60% {
+        transform: translateY(0em);
+  
+    }
+  
+    80% {  
+        transform: translateY(0);
+  
+    }
+  }
+  
+
+  .footer1{
+    position: absolute; 
+    bottom: 0; 
+    right: 0;
+    margin-top: auto;
+    margin-right: 1svh;
+    font-family: "Secular One", sans-serif;
+    font-style: normal;
+  }
+
+  .ftspn{
+    color: rgb(181, 180, 180);
+  }
