--- a/app/page.css
+++ b/app/page.css
@@ -1,11 +1,12 @@
 
 .header{
+  z-index: 2;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     position: relative;
-    padding-top: 1.6em;
-    font-size: 6em;
+    padding-top: 2em;
+    font-size: 7em;
     text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.405);
     font-family: "Secular One", sans-serif;
     font-weight: 400;
@@ -15,12 +16,13 @@
   }
   
   .header2{
+    z-index: 2;
     display: flex;
     color: rgb(0, 85, 255);
     justify-content: center;
     align-items: center;
     position: relative;
-    font-size: 6em;
+    font-size: 7em;
     text-shadow: 3px 3px 3px rgba(4, 20, 37, 0.526);
     font-family: "Secular One", sans-serif;
     font-weight: 400;
@@ -35,8 +37,8 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      padding-top: 4.6em;
-      font-size: 2.5em;
+      padding-top: 5.5em;
+      font-size: 3.5em;
       text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.405);
       font-family: "Secular One", sans-serif;
       font-weight: 400;
@@ -79,3 +81,586 @@
       }
     }
     
+
+    .container {
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+      
+    }
+    a {
+      text-decoration: none;
+    }
+    h1.main, p.demos {
+      -webkit-animation-delay: 18s;
+      -moz-animation-delay: 18s;
+      -ms-animation-delay: 18s;
+      animation-delay: 18s;
+    }
+    .sp-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.267));
+      background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0));
+      background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.331));
+      background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.115));
+    }
+    .sp-content {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      z-index: 1000;
+    }
+    .sp-container h2 {
+      position: absolute;
+      top: 50%;
+      height: 90px;
+      margin-top: -50px;
+      font-size: 5em;
+      width: 100%;
+      text-align: center;
+      color: transparent;
+      -webkit-animation: blurFadeInOut 3s ease-in backwards;
+      -moz-animation: blurFadeInOut 3s ease-in backwards;
+      -ms-animation: blurFadeInOut 3s ease-in backwards;
+      animation: blurFadeInOut 3s ease-in backwards;
+      font-family: "Secular One", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      user-select: none;
+    }
+    .sp-container h2.frame-1 {
+      -webkit-animation-delay: 0s;
+      -moz-animation-delay: 0s;
+      -ms-animation-delay: 0s;
+      animation-delay: 0s;
+    }
+    .sp-container h2.frame-2 {
+      -webkit-animation-delay: 3s;
+      -moz-animation-delay: 3s;
+      -ms-animation-delay: 3s;
+      animation-delay: 3s;
+    }
+    .sp-container h2.frame-3 {
+      -webkit-animation-delay: 6s;
+      -moz-animation-delay: 6s;
+      -ms-animation-delay: 6s;
+      animation-delay: 6s;
+    }
+    .sp-container h2.frame-4 {
+      -webkit-animation-delay: 9s;
+      -moz-animation-delay: 9s;
+      -ms-animation-delay: 9s;
+      animation-delay: 9s;
+    }
+    .sp-container h2.frame-5 {
+      -webkit-animation: none;
+      -moz-animation: none;
+      -ms-animation: none;
+      animation: none;
+      color: transparent;
+      text-shadow: 0px 0px 1px #fff;
+    }
+    .sp-container h2.frame-5 span {
+      -webkit-animation: blurFadeIn 3s ease-in 12s backwards;
+      -moz-animation: blurFadeIn 1s ease-in 12s backwards;
+      -ms-animation: blurFadeIn 3s ease-in 12s backwards;
+      animation: blurFadeIn 3s ease-in 12s backwards;
+      color: transparent;
+      text-shadow: 0px 0px 1px #fff;
+    }
+    .sp-container h2.frame-5 span:nth-child(2) {
+      -webkit-animation-delay: 13s;
+      -moz-animation-delay: 13s;
+      -ms-animation-delay: 13s;
+      animation-delay: 13s;
+    }
+    .sp-container h2.frame-5 span:nth-child(3) {
+      -webkit-animation-delay: 14s;
+      -moz-animation-delay: 14s;
+      -ms-animation-delay: 14s;
+      animation-delay: 14s;
+    }
+    .sp-globe {
+      position: absolute;
+      width: 282px;
+      height: 273px;
+      left: 50%;
+      top: 50%;
+      margin: -137px 0 0 -141px;
+      background: transparent url(http://web-sonick.zz.mu/images/sl/globe.png) no-repeat top left;
+      -webkit-animation: fadeInBack 3.6s linear 14s backwards;
+      -moz-animation: fadeInBack 3.6s linear 14s backwards;
+      -ms-animation: fadeInBack 3.6s linear 14s backwards;
+      animation: fadeInBack 3.6s linear 14s backwards;
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+      filter: alpha(opacity=30);
+      opacity: 0.3;
+      -webkit-transform: scale(5);
+      -moz-transform: scale(5);
+      -o-transform: scale(5);
+      -ms-transform: scale(5);
+      transform: scale(5);
+    }
+    .sp-circle-link {
+      position: absolute;
+      left: 50%;
+      bottom: 100px;
+      margin-left: -50px;
+      text-align: center;
+      line-height: 100px;
+      width: 100px;
+      height: 100px;
+      background: #fff;
+      color: #3f1616;
+      font-size: 25px;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      -webkit-animation: fadeInRotate 1s linear 16s backwards;
+      -moz-animation: fadeInRotate 1s linear 16s backwards;
+      -ms-animation: fadeInRotate 1s linear 16s backwards;
+      animation: fadeInRotate 1s linear 16s backwards;
+      -webkit-transform: scale(1) rotate(0deg);
+      -moz-transform: scale(1) rotate(0deg);
+      -o-transform: scale(1) rotate(0deg);
+      -ms-transform: scale(1) rotate(0deg);
+      transform: scale(1) rotate(0deg);
+    }
+    .sp-circle-link:hover {
+      background: #85373b;
+      color: #fff;
+    }
+    /**/
+    
+    @-webkit-keyframes blurFadeInOut {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        -webkit-transform: scale(1.3);
+      }
+      20%, 75% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        -webkit-transform: scale(1);
+      }
+      100% {
+        opacity: 0;
+        text-shadow: 0px 0px 50px #fff;
+        -webkit-transform: scale(0);
+      }
+    }
+    @-webkit-keyframes blurFadeIn {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        -webkit-transform: scale(1.3);
+      }
+      50% {
+        opacity: 0.5;
+        text-shadow: 0px 0px 10px #fff;
+        -webkit-transform: scale(1.1);
+      }
+      100% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        -webkit-transform: scale(1);
+      }
+    }
+    @-webkit-keyframes fadeInBack {
+      0% {
+        opacity: 0;
+        -webkit-transform: scale(0);
+      }
+      50% {
+        opacity: 0.4;
+        -webkit-transform: scale(2);
+      }
+      100% {
+        opacity: 0.2;
+        -webkit-transform: scale(5);
+      }
+    }
+    @-webkit-keyframes fadeInRotate {
+      0% {
+        opacity: 0;
+        -webkit-transform: scale(0) rotate(360deg);
+      }
+      100% {
+        opacity: 1;
+        -webkit-transform: scale(1) rotate(0deg);
+      }
+    }
+    /**/
+    
+    @-moz-keyframes blurFadeInOut {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        -moz-transform: scale(1.3);
+      }
+      20%, 75% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        -moz-transform: scale(1);
+      }
+      100% {
+        opacity: 0;
+        text-shadow: 0px 0px 50px #fff;
+        -moz-transform: scale(0);
+      }
+    }
+    @-moz-keyframes blurFadeIn {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        -moz-transform: scale(1.3);
+      }
+      100% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        -moz-transform: scale(1);
+      }
+    }
+    @-moz-keyframes fadeInBack {
+      0% {
+        opacity: 0;
+        -moz-transform: scale(0);
+      }
+      50% {
+        opacity: 0.4;
+        -moz-transform: scale(2);
+      }
+      100% {
+        opacity: 0.2;
+        -moz-transform: scale(5);
+      }
+    }
+    @-moz-keyframes fadeInRotate {
+      0% {
+        opacity: 0;
+        -moz-transform: scale(0) rotate(360deg);
+      }
+      100% {
+        opacity: 1;
+        -moz-transform: scale(1) rotate(0deg);
+      }
+    }
+    /**/
+    
+    @keyframes blurFadeInOut {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        transform: scale(1.3);
+      }
+      20%, 75% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        transform: scale(1);
+      }
+      100% {
+        opacity: 0;
+        text-shadow: 0px 0px 50px #fff;
+        transform: scale(0);
+      }
+    }
+    @keyframes blurFadeIn {
+      0% {
+        opacity: 0;
+        text-shadow: 0px 0px 40px #fff;
+        transform: scale(1.3);
+      }
+      50% {
+        opacity: 0.5;
+        text-shadow: 0px 0px 10px #fff;
+        transform: scale(1.1);
+      }
+      100% {
+        opacity: 1;
+        text-shadow: 0px 0px 1px #fff;
+        transform: scale(1);
+      }
+    }
+    @keyframes fadeInBack {
+      0% {
+        opacity: 0;
+        transform: scale(0);
+      }
+      50% {
+        opacity: 0.4;
+        transform: scale(2);
+      }
+      100% {
+        opacity: 0.2;
+        transform: scale(5);
+      }
+    }
+    @keyframes fadeInRotate {
+      0% {
+        opacity: 0;
+        transform: scale(0) rotate(360deg);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1) rotate(0deg);
+      }
+    }
+
+    
+
+    /*  ---------------------     */
+
+
+    .animation-container {
+      z-index: 1;
+      position: relative;
+      width: 800px;
+      max-width: 100%;
+      margin: 0 auto;
+  }
+  
+  .animation-container .lightning-container {
+      position: absolute;
+      top: 50%;
+
+      z-index: 1;
+      left: 0;
+      display: flex;
+      transform: translateY(-50%);
+  }
+  
+  .animation-container .lightning-container .lightning {
+      position: absolute;
+      display: block;
+      height: 12px;
+      width: 12px;
+      border-radius: 12px;
+      transform-origin: 6px 6px;
+      animation-name: woosh;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      animation-timing-function: cubic-bezier(0.445, 0.050, 0.550, 0.950);
+      animation-direction: alternate;
+  }
+  
+  .animation-container .lightning-container .lightning.white {
+      background-color: white;
+      box-shadow: 0px 50px 50px 0px rgba(255, 255, 255, 0.3);
+  }
+  
+  .animation-container .lightning-container .lightning.red {
+      background-color: #ffc800;
+      box-shadow: 0px 50px 50px 0px rgba(30, 0, 255, 0.3);
+      animation-delay: 0.2s;
+  }
+  
+  .animation-container .boom-container {
+      position: absolute;
+      display: flex;
+      width: 80px;
+      height: 80px;
+      text-align: center;
+      align-items: center;
+      transform: translateY(-50%);
+      z-index: -1;
+
+      left: 200px;
+      top: -145px;
+  }
+  
+  .animation-container .boom-container .shape {
+      display: inline-block;
+      position: relative;
+      opacity: 0;
+      transform-origin: center center;
+  }
+  
+  .animation-container .boom-container .shape.triangle {
+      width: 0;
+      height: 0;
+      border-style: solid;
+      transform-origin: 50% 80%;
+      animation-duration: 1s;
+      animation-timing-function: ease-out;
+      animation-iteration-count: infinite;
+      margin-left: -15px;
+      border-width: 0 2.5px 5px 2.5px;
+      border-color: transparent transparent #42e599 transparent;
+      animation-name: boom-triangle;
+  }
+  
+  .animation-container .boom-container .shape.triangle.big {
+      margin-left: -25px;
+      border-width: 0 5px 10px 5px;
+      border-color: transparent transparent #fade28 transparent;
+      animation-name: boom-triangle-big;
+  }
+  
+  .animation-container .boom-container .shape.disc {
+      width: 8px;
+      height: 8px;
+      border-radius: 100%;
+      background-color: #d15ff4;
+      animation-name: boom-disc;
+      animation-duration: 1s;
+      animation-timing-function: ease-out;
+      animation-iteration-count: infinite;
+  }
+  
+  .animation-container .boom-container .shape.circle {
+      width: 100px;
+      height: 100px;
+      animation-name: boom-circle;
+      animation-duration: 1s;
+      animation-timing-function: ease-out;
+      animation-iteration-count: infinite;
+      border-radius: 100%;
+      margin-left: -30px;
+  }
+  
+  .animation-container .boom-container .shape.circle.white {
+      border: 1px solid white;
+  }
+  
+  .animation-container .boom-container .shape.circle.big {
+      width: 40px;
+      height: 40px;
+      margin-left: 0px;
+  }
+  
+  .animation-container .boom-container .shape.circle.big.white {
+      border: 2px solid white;
+  }
+  
+  .animation-container .boom-container .shape:after {
+      background-color: rgba(178, 215, 232, 0.2);
+  }
+  
+  .animation-container .boom-container .shape.triangle,
+  .animation-container .boom-container .shape.circle,
+  .animation-container .boom-container .shape.circle.big,
+  .animation-container .boom-container .shape.disc {
+      animation-delay: .38s;
+      animation-duration: 3s;
+  }
+  
+  .animation-container .boom-container .shape.circle {
+      animation-delay: 0.6s;
+  }
+  
+  .animation-container .boom-container.second {
+      left: 485px;
+      top: 155px;
+  }
+  
+  .animation-container .boom-container.second .shape.triangle,
+  .animation-container .boom-container.second .shape.circle,
+  .animation-container .boom-container.second .shape.circle.big,
+  .animation-container .boom-container.second .shape.disc {
+      animation-delay: 1.9s;
+  }
+  
+  .animation-container .boom-container.second .shape.circle {
+      animation-delay: 2.15s;
+  }
+  
+  @keyframes woosh {
+      0% {
+          width: 12px;
+          transform: translate(0px, 0px) rotate(-35deg);
+      }
+      15% {
+          width: 50px;
+      }
+      30% {
+          width: 12px;
+          transform: translate(214px, -150px) rotate(-35deg);
+      }
+      30.1% {
+          transform: translate(214px, -150px) rotate(46deg);
+      }
+      50% {
+          width: 110px;
+      }
+      70% {
+          width: 12px;
+          transform: translate(500px, 150px) rotate(46deg);
+      }
+      70.1% {
+          transform: translate(500px, 150px) rotate(-37deg);
+      }
+      85% {
+          width: 50px;
+      }
+      100% {
+          width: 12px;
+          transform: translate(700px, 0) rotate(-37deg);
+      }
+  }
+  
+  @keyframes boom-circle {
+      0% {
+          opacity: 0;
+      }
+      5% {
+          opacity: 1;
+      }
+      30% {
+          opacity: 0;
+          transform: scale(3);
+      }
+      100% {
+      }
+  }
+  
+  @keyframes boom-triangle-big {
+      0% {
+          opacity: 0;
+      }
+      5% {
+          opacity: 1;
+      }
+      40% {
+          opacity: 0;
+          transform: scale(2.5) translate(50px, -50px) rotate(360deg);
+      }
+      100% {
+      }
+  }
+  
+  @keyframes boom-triangle {
+      0% {
+          opacity: 0;
+      }
+      5% {
+          opacity: 1;
+      }
+      30% {
+          opacity: 0;
+          transform: scale(3) translate(20px, 40px) rotate(360deg);
+      }
+      100% {
+      }
+  }
+  
+  @keyframes boom-disc {
+      0% {
+          opacity: 0;
+      }
+      5% {
+          opacity: 1;
+      }
+      40% {
+          opacity: 0;
+          transform: scale(2) translate(-70px, -30px);
+      }
+      100% {
+      }
+  }
