--- a/app/page.css
+++ b/app/page.css
@@ -417,6 +417,7 @@
       width: 800px;
       max-width: 100%;
       margin: 0 auto;
+      animation-iteration-count: infinite;
   }
   
   .animation-container .lightning-container {
