--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -3,8 +3,10 @@
     width: 100vw;
     display:flex;
     justify-content:space-evenly;
-    align-items: center;
-    background-color: #90a1ffa9;
+    align-items:self-start;
+    position: absolute;
+    height: 100%;
+    z-index: 3;
 }
 
 .button-9 {
@@ -34,20 +36,46 @@
   touch-action: manipulation;
 }
 
-.button-9:disabled {
-  cursor: default;
-}
-
-.button-9:focus {
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
-}
-
 .page{
     width: 100%;
 }
 
-.left{
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.option{
+  appearance: button;
+  backface-visibility: hidden;
+  background-color: #405cf5;
+  border-radius: 6pxrgb(99, 122, 255);
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-size: 2em;
+}
 
+.dropdown{
+  transition: all 0.2s ease-in-out;
+  z-index: 2;
+}
+
+.child-container{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
