--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -172,6 +172,13 @@ h1, li, p{
     font-size: 1.5em;
     margin: 0;
   }
+  .image-container{
+    height: 10em;
+    width: 15em;
+  }
+  .images{
+    flex-direction: column;
+  }
 }
 
 .link{
@@ -182,8 +189,5 @@ h1, li, p{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
-
-.image{
-  height: 10em;
+  height: fit-content;
 }
