--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -140,6 +140,7 @@ h1, li, p{
 .container{
   text-align: center;
   height: 100%;
+  margin: 10px;
 }
 
 .head{
@@ -172,10 +173,6 @@ h1, li, p{
     font-size: 1.5em;
     margin: 0;
   }
-  .image-container{
-    height: 10em;
-    width: 15em;
-  }
   .images{
     flex-direction: column;
   }
@@ -186,8 +183,17 @@ h1, li, p{
 }
 
 .images{
+  position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   height: fit-content;
+  width: 100%;
 }
+
+.image{
+  height: 15em;
+  width: 15em;
+  object-fit: contain;
+}
+
