--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -7,6 +7,7 @@
     position: absolute;
     height: 100%;
     z-index: 3;
+    margin-top: 1svh;
 }
 
 .button-9 {
@@ -19,8 +20,8 @@
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
-  font-size: 100%;
-  height: 3em;
+  font-size: 1.3em;
+  height: 4em;
   line-height: 1.15;
   margin: 12px 0 0;
   outline: none;
@@ -57,7 +58,7 @@
   line-height: 1.15;
   outline: none;
   overflow: hidden;
-  padding: 0 25px;
+  padding: 10px 25px;
   position: relative;
   text-align: center;
   text-transform: none;
@@ -66,7 +67,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  font-size: 3em;
+  font-size: 2.5em;
   font-family: "Secular One", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -76,7 +77,8 @@
 }
 
 .option:hover{
-  color: black;
+  background-color: #3c56eb;
+  color: rgb(215, 215, 215);
 }
 
 .dropdown{
@@ -85,6 +87,12 @@
   background-color: #405cf5;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+
+.drop:hover{
+    background-color: #3c56eb;
+    color: rgb(215, 215, 215);
 }
 
 .child-container{
@@ -104,35 +112,12 @@
 }
 
 .no-drop:hover{
-  animation-name: glow;
+    background-color: #3c56eb;
+    color: rgb(215, 215, 215);
+
 }
 
-@keyframes glow {
-  0%{
-    box-shadow: none;
-  }
-  50%{
-    box-shadow:
-    0 0 20px 5px #fff,
-    0 0 35px 10px #f0f,
-    0 0 20px 15px #0ff;
-  }
-  100%{
-    box-shadow: none;
-  }
-}
 
-@keyframes stop-glowing {
-  0%{
-    box-shadow:
-    0 0 20px 5px #fff,
-    0 0 35px 10px #f0f,
-    0 0 20px 15px #0ff;
-  }
-  100%{
-    box-shadow: none;
-  }
-}
 
 h1, li, p{
   font-family: "Secular One", sans-serif;
@@ -172,7 +157,7 @@ h1, li, p{
 }
 
 .link:hover{
-  color: black;
+  color: rgb(7, 147, 255);
 }
 
 @media (max-width: 490px) {
