--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -13,10 +13,10 @@
 .button-9 {
   appearance: button;
   backface-visibility: hidden;
-  background-color: #405cf5;
+  background: linear-gradient(90deg, rgb(39, 105, 171) 0%, rgb(44, 110, 176) 50%, rgb(39, 105, 171) 100%);
   border-radius: 6px;
   border-width: 0;
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.066);
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -48,10 +48,12 @@
 .option{
   appearance: button;
   backface-visibility: hidden;
-  background-color: #405cf5;
-  border-radius: 6pxrgb(99, 122, 255);
+  background: linear-gradient(90deg, rgb(39, 105, 171) 0%, rgb(44, 110, 176) 50%, rgb(39, 105, 171) 100%);
+  border-radius: 6px rgb(99, 122, 255);
   border-width: 0;
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0,
+  rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -109,6 +111,8 @@
   box-shadow: none;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.116);
+
 }
 
 .no-drop:hover{
@@ -134,12 +138,16 @@ h1, li, p{
 
 .head{
   font-size: 3em;
-  margin-bottom: 1em;
+  margin-bottom: 2.5em;
+  margin-top: 2.5em;
 }
 
 .description{
-  font-size: 2em;
-  margin: 1em;
+  font-size: 1.5em;
+  width: 30em;
+  margin-right: 3em;/* REMOVE THIS IN WHILE MEDIA*/
+  max-width: 30em;
+
 }
 
 .links{
@@ -194,4 +202,29 @@ h1, li, p{
 
 .descriptions{
   display: flex;
+  margin-bottom: 10em;
+
 }
+
+.CV-text{
+  font-size: 1.5em;
+  margin-left: 3em; /* REMOVE THIS IN WHILE MEDIA*/
+  width: 54em;
+
+
+
+  
+}
+
+.Whoami{
+  font-size: 2.5em;
+  margin-bottom: 1em;
+
+}
+
+.CV-head{
+  font-size: 2.5em;
+  margin-bottom: 1em;
+
+}
+
