--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,7 @@ html {
 }
 
   .footer1{
-    position: absolute; 
+    position: sticky; 
     bottom: 0; 
     right: 0;
     margin-top: auto;
@@ -118,8 +118,13 @@ html {
     font-family: "Secular One", sans-serif;
     font-style: normal;
     z-index: 10;
+    user-select: none;
+  -webkit-user-select: none;
+
+
   }
 
   .ftspn{
     color: rgb(181, 180, 180);
+    user-select:all;
   }
