--- a/app/page.css
+++ b/app/page.css
@@ -663,18 +663,19 @@ body{
       }
   }
 
-  @media screen and (max-width: 460px) {
+  @media screen and (max-width: 800px) {
     .header{
-      font-size: 3em;
+      font-size: 4.5em;
+      margin-top: 3.5em;
     }
     .header2{
-      font-size: 2em;
+      font-size: 5em;
     }
     .sp-container h2{
       top: 50%;
       font-size: 2em;
     }
     .clicktomain{
-      font-size: 2em;
+      font-size: 2.5em;
     }
   }
