--- a/app/projects/layout.css
+++ b/app/projects/layout.css
@@ -223,6 +223,25 @@ h1, li, p{
 }
 
 
+.char{
+  font-size: 40px;
+  height: 40px;
+  animation: an;
+  display: inline-block;
+}
+
+@keyframes an{
+  from{
+      opacity: 0;
+      transform: perspective(500px) translate3d(-35px, -40px, -150px) rotate3d(1, -1, 0, 35deg);
+  }
+  to{
+      opacity: 1;
+      transform: perspective(500px) translate3d(0, 0, 0);
+  }
+}
+
+
 @media (max-width: 490px) {
 
   .description{
